--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: perfect_scanner_example
-description: Demonstrates how to use the perfect_scanner plugin.
+name: qr_image_picker_example
+description: Demonstrates how to use the qr_image_picker plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -18,7 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  perfect_scanner:
+  qr_image_picker:
     path: ../
   permission_handler: ^10.1.0
 
