--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: qr_image_picker
 description: Easy to use qr code scanner thats uses google ml kit for for image processing and camera for reading the qr.
 version: 1.0.0
-homepage: null
+homepage: https://github.com/ShresthSaini/QR_Image_Picker
 
 environment:
   sdk: '>=2.18.1 <3.0.0'
